--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
         font-family: 'DM Serif Display', serif;
 font-family: 'Unbounded', cursive;
     }
+    .garamond-56{-webkit-font-smoothing:antialiased;font:400 56px/1.17 EB Garamond,Georgia,Times New Roman,serif}.garamond-48,.garamond-56{text-rendering:optimizeLegibility}.garamond-48{-webkit-font-smoothing:antialiased;font:400 48px/1.17 EB Garamond,Georgia,Times New Roman,serif}.garamond-38{-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;font:400 38px/1.26 EB Garamond,Georgia,Times New Roman,serif}.garamond-30{font:400 30px/1.27 EB Garamond,Georgia,Times New Roman,serif}.garamond-24{font:400 24px/1.33 EB Garamond,Georgia,Times New Roman,serif}.garamond-18{font:400 18px/1.33 EB Garamond,Georgia,Times New Roman,serif}.garamond-16{font:400 16px/1.5 EB Garamond,Georgia,Times New Roman,serif}.garamond-14{font:400 14px/1.5 EB Garamond,Georgia,Times New Roman,serif}
     .montserrat-32{font:32px/1.44 Montserrat,Verdana,sans-serif}.montserrat-30,.montserrat-32{letter-spacing:2.2px;text-transform:uppercase}.montserrat-30,.montserrat-30-lowercase{font:30px/1.4 Montserrat,Verdana,sans-serif}.montserrat-24{letter-spacing:2px;text-transform:uppercase}.montserrat-24,.montserrat-24-lowercase{font:24px/1.33 Montserrat,Verdana,sans-serif}.montserrat-20{font:20px/1.3 Montserrat,Verdana,sans-serif;letter-spacing:1.8px;text-transform:uppercase}.montserrat-18{font:18px/1.33 Montserrat,Verdana,sans-serif;letter-spacing:1.6px;text-transform:uppercase}.montserrat-18-lowercase{font:18px/1.61 Montserrat,Verdana,sans-serif}.montserrat-16{letter-spacing:1.5px;text-transform:uppercase}.montserrat-16,.montserrat-16-lowercase{font:16px/1.5 Montserrat,Verdana,sans-serif}.montserrat-14{letter-spacing:1.3px;text-transform:uppercase}.montserrat-14,.montserrat-14-lowercase{font:14px/1.57 Montserrat,Verdana,sans-serif}.montserrat-12-lowercase{font:12px/1.5 Montserrat,Verdana,sans-serif}.montserrat-10{font:10px/1.2 Montserrat,Verdana,sans-serif;letter-spacing:1px;text-transform:uppercase}
   </style>
   <style> @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap'); </style>
@@ -1286,7 +1287,7 @@ font-family: 'Unbounded', cursive;
 
 
 
-  <div #swiperRef="" class="swiper-container1 mySwiper" style="margin-top: 10%;margin-bottom: 15%;">
+  <div #swiperRef="" class="swiper-container1 mySwiper" style="margin-top: 10%;margin-bottom: 5%;">
     <div class="swiper-wrapper">
       <div class="swiper-slide" style="margin: 0%;">
         <div>
@@ -1563,12 +1564,10 @@ font-family: 'Unbounded', cursive;
                  
 					
 	
-  <div style="webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  font: 400 48px/1.17 EB Garamond,Georgia,Times New Roman,serif;
-  line-height: 1.5;font-size: 3.2rem;margin-top: 20% !important;margin-bottom: 3%; background: #000;">
-  <h1 style="font-weight: bold;color: white;margin-left: 10%; font-size: 5rem;">Science & Tech</h1>
-  <div style="display: flex;padding: 5px;    flex-wrap: wrap;flex-direction: row;">
+  <div style="margin-bottom: 3%; background: #000;padding: 3%;">
+  <h1 style="font-weight: bold;color: white;margin-left: 10%; font-size: 5rem;font: 400 70px/1.17 EB Garamond,Georgia,Times New Roman,serif;
+  line-height: 1.5; ">Science & Tech</h1>
+  <div style="display: flex;padding: 5px;    flex-wrap: wrap;flex-direction: row;margin-left: 8%; margin-right: 8%;justify-content: center;">
     <div class="cardimage">
         <a href="./book big bang of number.html" class="teaser-image" >
             <div class="image-wrapper">
